# Stellar-Engine

./: .gitignore  CMakeLists.txt  ENGINE.md  GDD.md  LICENSE  README.md  ROADMAP.md  build.hxml  doc.tex  game.c  project.xml
Game/: game.c  test.mtl
game/: game.c  level1.txt
src/: Main.hx  engine.c  engine.h  level.c  level.h  loader.c  stellar.c  stellar.h
